faz uns baguio aew

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <input type="number" class="form-control" id="roundPotDiameterInfInput">
         </div>
         <button onclick="calcRoundPotVol()" class="btn btn-success" style="margin-top: 1rem;">Calcular</button>
-        <button onclick="clearInputs(roundPotHeightInput, roundPotDiameterSupInput, roundPotDiameterInfInput)" class="btn btn-warning" style="margin-top: 1rem;">Limpar</button>
+        <button onclick="clearInputs(roundPotHeightInput, roundPotDiameterSupInput, roundPotDiameterInfInput)" class="btn btn-warning" style="margin-top: 1rem; margin-left: 2rem;">Limpar</button>
       </div>
       <div class="card-footer">
         <label for="displayRoundResult">Resultado</label>
@@ -64,7 +64,7 @@
           <input type="number" class="form-control" id="squarePotInfInput"/>
         </div>
         <button onclick="calcSquarePotVol()" class="btn btn-success" style="margin-top: 1rem;">Calcular</button>
-        <button onclick="clearInputs(squarePotHeightInput, squarePotSupInput, squarePotInfInput)" class="btn btn-warning" style="margin-top: 1rem;">Limpar</button>
+        <button onclick="clearInputs(squarePotHeightInput, squarePotSupInput, squarePotInfInput)" class="btn btn-warning" style="margin-top: 1rem; margin-left: 2rem;">Limpar</button>
       </div>
       <div class="card-footer">
         <label for="displaySquareResult">Resultado</label>
