--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <nav aria-label="breadcrumb" class="marginator">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item active" aria-current="page">Calcule o volume do seu vaso de plantas em litros</li>
+        <li class="breadcrumb-item active" aria-current="page" style="color: rgb(0, 0, 0); font-weight: 200; font-size: 2rem;">Calcule o volume do seu vaso de plantas em litros</li>
         <i class="fas fa-seedling icon"></i>
       </ol>
     </nav>
@@ -37,8 +37,8 @@
           <label for="roundPotDiameterInfInput">Insira o diametro da base (cm)</label>
           <input type="number" class="form-control" id="roundPotDiameterInfInput">
         </div>
-        <button onclick="calcRoundPotVol()" class="btn btn-success" style="margin-top: 1rem;">Calcular</button>
-        <button onclick="clearInputs(roundPotHeightInput, roundPotDiameterSupInput, roundPotDiameterInfInput)" class="btn btn-warning" style="margin-top: 1rem; margin-left: 2rem;">Limpar</button>
+        <button onclick="calcRoundPotVol()" class="btn" style="margin-top: 1rem; background-color: #d0ffbd;">Calcular</button>
+        <button onclick="clearInputs(roundPotHeightInput, roundPotDiameterSupInput, roundPotDiameterInfInput)" class="btn" style="margin-top: 1rem; margin-left: 2rem; background-color: #feffbd;">Limpar</button>
       </div>
       <div class="card-footer">
         <label for="displayRoundResult">Resultado</label>
@@ -63,8 +63,8 @@
           <label for="squarePotInfInput">Insira o lado inferior (cm)</label>
           <input type="number" class="form-control" id="squarePotInfInput"/>
         </div>
-        <button onclick="calcSquarePotVol()" class="btn btn-success" style="margin-top: 1rem;">Calcular</button>
-        <button onclick="clearInputs(squarePotHeightInput, squarePotSupInput, squarePotInfInput)" class="btn btn-warning" style="margin-top: 1rem; margin-left: 2rem;">Limpar</button>
+        <button onclick="calcSquarePotVol()" class="btn" style="margin-top: 1rem; background-color: #d0ffbd;">Calcular</button>
+        <button onclick="clearInputs(squarePotHeightInput, squarePotSupInput, squarePotInfInput)" class="btn" style="margin-top: 1rem; margin-left: 2rem;  background-color: #feffbd;">Limpar</button>
       </div>
       <div class="card-footer">
         <label for="displaySquareResult">Resultado</label>
